Design: 헤더, 푸터 퍼블리싱 중

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
         <title>Torriden</title>
         <link rel="stylesheet" href="./reset.css" />
         <link rel="stylesheet" href="./index.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+            rel="stylesheet"
+        />
+        <script src="./include.js" defer></script>
     </head>
-    <body></body>
+    <body>
+        <!-- 공통 header -->
+        <div id="header"></div>
+
+        <main></main>
+
+        <!-- 공통 footer -->
+        <div id="footer"></div>
+    </body>
 </html>
