Docs:brandwork js추가

--- a/yuna/pages/brandwork.html
+++ b/yuna/pages/brandwork.html
@@ -6,69 +6,13 @@
     <title>Torriden</title>
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../css/brandwork.css" />
+    <script src="../javascript/brandwork.js" defer></script>
   </head>
   <body>
     <div class="brandwork">
       <h2 class="brandwork__title">브랜드 캠페인</h2>
-      <section class="brandwork__contents">
-        <article class="contents">
-          <img src="../img/brandwork_first.png" alt="" />
-          <span class="contents-title"
-            >Commentary Ep 05. NEW CELLMAZING <br />Brightening Spot Toning Pad
-          </span>
-          <span class="contents-sub">셀메이징 비타패드 런칭 </span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_second.png" alt="" />
-          <span class="contents-title">2025 올리브영 페스타 </span>
-          <span class="contents-sub">2025 OlLIVE YOUNG FESTA - Torriden </span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_third.png" alt="" />
-          <span class="contents-title">CONNECT TO POSITIVE CYCLE! </span>
-          <span class="contents-sub">토리도원 기획세트</span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_fourth.png" alt="" />
-          <span class="contents-title">토리든 커넥트 성수</span>
-          <span class="contents-sub">Torriwave Club Open!</span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_5.png" alt="" />
-          <span class="contents-title"
-            >Commentary Ep 04. NEW 'CELLMAZING PORE <br />PERFECTING AMPOULE'
-          </span>
-          <span class="contents-sub">셀메이징 모공 탄력앰플 런칭</span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_6.png" alt="" />
-          <span class="contents-title">토리든 커넥트 성수 </span>
-          <span class="contents-sub">가장 맑고 청아한 공간, 토리도원</span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_7.png" alt="" />
-          <span class="contents-title"
-            >Commentary Ep 03. Don’t worry be Sunny
-          </span>
-          <span class="contents-sub">토리든 x 크리에이터 해쭈</span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_8.png" alt="" />
-          <span class="contents-title"
-            >Commentary Ep 02. NEW ‘DIVE IN Cleansing Oil’</span
-          >
-          <span class="contents-sub">다이브인 클렌징 오일 런칭</span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_9.png" alt="" />
-          <span class="contents-title">2024 HOLIDAY NIGHT – MINI CONCERT</span>
-          <span class="contents-sub">토리든 x søye (소이에)</span>
-        </article>
-        <article class="contents">
-          <img src="../img/brandwork_10.png" alt="" />
-          <span class="contents-title">토리든 커넥트 성수</span>
-          <span class="contents-sub">Connect to Positive Cycle!</span>
-        </article>
+      <section class="brandwork__section">
+        <!-- js 있음 -->
       </section>
     </div>
   </body>
