Design: footer 퍼블리싱 완료

--- a/taejin/pages/footer.html
+++ b/taejin/pages/footer.html
@@ -2,28 +2,79 @@
 <footer>
     <div class="footer_contents">
         <h5>주식회사 토리든</h5>
-        <br />
-        <br />
-        <div>
-            <span>대표자</span>
-            <span>주소</span>
-            <span>사업자등록번호</span>
-            <span>통신판매업 신고</span>
-            <span>개인정보관리책임자</span>
+        <div class="footer_contents_info">
+            <div class="footer_contents_info-1">
+                <span
+                    >대표자
+                    <p>권인구, 이윤희</p></span
+                >
+                <span
+                    >주소
+                    <p>
+                        [대전 본사] 대전 서구 도안북로93번길 10-3, 2층
+                        <br />[서울 지사] 서울 강남구 언주로 620, 7층
+                    </p></span
+                >
+                <span
+                    >사업자등록번호
+                    <p>760-86-00222</p></span
+                >
+                <span
+                    >통신판매업 신고
+                    <p>2019-대전서구-0605</p></span
+                >
+                <span
+                    >개인정보관리책임자
+                    <p>권인구, 이윤희</p></span
+                >
+            </div>
+            <div class="footer_contents_info-2">
+                <span
+                    >고객센터
+                    <p>1600-3584</p></span
+                >
+                <span
+                    >운영시간
+                    <p>
+                        평일 10:00 - 17:00 (주말 · 공휴일 고객센터 휴무)<br />점심시간
+                        12:00 - 13:00
+                    </p></span
+                >
+                <span
+                    >팩스번호
+                    <p>070-7834-7700</p></span
+                >
+                <span
+                    >고객문의
+                    <p>info@torriden.com</p></span
+                >
+                <span
+                    >국내영업
+                    <p>sales@torriden.com</p></span
+                >
+                <span
+                    >국내마케팅
+                    <p>mkt@torriden.com</p></span
+                >
+                <span
+                    >해외마케팅
+                    <p>global@torriden.com</p></span
+                >
+            </div>
+
+            <div class="footer_contents_info-3">
+                <span>고객센터</span>
+                <span>이용약관</span>
+                <span>공지사항</span>
+                <span>자주묻는질문</span>
+                <span>1:1문의</span>
+                <span>채용사이트</span>
+                <span>개인정보처리방침</span>
+            </div>
+            <div class="footer_contents_info-4">
+                <span>Brand Site</span>
+                <i class="ri-add-line"></i>
+            </div>
         </div>
-        <div>
-            <span>권인구, 이윤희</span>
-            <span
-                >[대전 본사] 대전 서구 도안북로93번길 10-3, 2층 <br />[서울
-                지사] 서울 강남구 언주로 620, 7층
-            </span>
-            <span>760-86-00222</span>
-            <span>2019-대전서구-0605</span>
-            <span>권인구, 이윤희</span>
-        </div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
     </div>
 </footer>
