Docs:brandwork__page2

--- a/yuna/pages/brandwork2.html
+++ b/yuna/pages/brandwork2.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torriden</title>
     <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../css/brandwork.css" />
-    <script src="../javascript/brandwork.js" defer></script>
+    <link rel="stylesheet" href="../css/brandwork2.css" />
+    <script src="../javascript/bramdwork2.js" defer></script>
   </head>
   <body>
     <div class="brandwork">
