Docs:event_active

--- a/yuna/pages/event_active.html
+++ b/yuna/pages/event_active.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torriden</title>
     <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../css/event.css" />
-    <script src="../javascript/event.js" defer></script>
+    <link rel="stylesheet" href="../css/event_active.css" />
+    <script src="../javascript/event_active.js" defer></script>
   </head>
   <body>
     <div class="event">
-      <h2 class="event__title">브랜드 캠페인</h2>
+      <h2 class="event__title">EVENT</h2>
       <div class="event__buttons">
-        <button class="event__buttons-active">
+        <button class="event__button event__buttons-active">
             진행중 이벤트
         </button>
-        <button class="event__buttons-ended">
+        <button class="event__button event__buttons-ended">
             종료된 이벤트
         </button>
       </div>
@@ -24,5 +24,8 @@
         <!-- <img class="event__section-image" src="" alt="">
         <span class="event__section-image"></span> -->
       </section>
+      <div class="event__pageButton">
+        <button class="event__pageButton-first">1</button>
+      </div> <br>
   </body>
 </html>
