--- a/youngson/pages/shop.html
+++ b/youngson/pages/shop.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../css/shop.css" />
+    <link rel="stylesheet" href="../css/shop_header.css" />
+    <link rel="stylesheet" href="../css/shop_item.css" />
     <script src="../javascript/shop.js" defer></script>
   </head>
   <body>
@@ -21,39 +23,11 @@
           <div class="shop_sort_selector">인기순</div>
         </div>
       </div>
-      <!-- Shop 컨텐츠 / 상품 -->
-      <div class="shop_item_wrap">
-        <!-- Shop 컨텐츠 카드 하나만 먼저 레이아웃 만들기 -->
-        <div class="shop_item_card">
-          <!-- Js
-           이미지 마우스오버 -->
-          <div class="shop_item_img_wrap">
-            <img id="item_img" src="../ys_img/product1.jpg" alt="" />
-            <a class="shop_heart_btn">
-              <img src="../ys_img/icon_heartbtn.svg" alt="" />
-            </a>
-          </div>
-          <div class="shop_item_info_wrap">
-            <div class="shop_item_name">
-              [3종세트] 다이브인 저분자 히알루론산 세럼 50ml + 토너 300ml + 크림
-              80ml+(쇼핑백 증정)
-            </div>
-
-            <!-- Js  
-             forEach 비포가격, 세일 퍼센트 숫자로 받고
-             계산해서 애프터에 넣어주기 -->
-            <div class="shop_item_price_wrap">
-              <div class="shop_item_price_sale">42%</div>
-              <div class="shop_item_price_after">36,900원</div>
-              <div class="shop_item_price_before">64,000원</div>
-            </div>
-          </div>
-          <div class="shop_item_cart_wrap">
-            <span>장바구니 담기</span>
-            <img src="../ys_img/icon_cart.svg" alt="" />
-          </div>
-        </div>
-      </div>
+      <!-- Shop 컨텐츠 / 상품
+      반복되는 레이아웃 미리 짜놓고
+      Js로 뿌려주기 
+      -->
+      <div class="shop_item_wrap" id="shop_item_wrap"></div>
     </section>
   </body>
 </html>
