--- a/youngson/pages/shop.html
+++ b/youngson/pages/shop.html
@@ -6,12 +6,37 @@
     <title>Torriden</title>
 
     <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/shop.css" />
     <link rel="stylesheet" href="../css/shop_header.css" />
     <link rel="stylesheet" href="../css/shop_item.css" />
+    <link rel="stylesheet" href="../css/shop_pagehandler.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+
     <script src="../javascript/shop.js" defer></script>
   </head>
   <body>
+    <!-- 전체 Header -->
+    <header>
+      <nav>
+        <img
+          src="https://torridtr9977.cdn-nhncommerce.com/data/skin/front/moment_C/img/banner/87091f70b00a68e2c0ae40eebd944819_11423.svg"
+          alt=""
+        />
+        <ul class="nav_menu">
+          <li>ABOUT</li>
+          <li>BRAND WORK</li>
+          <li>SHOP</li>
+          <li>EVENT</li>
+          <li>COMMUNITY</li>
+        </ul>
+        <ul class="nav_icon">
+          <li><i class="ri-search-line"></i></li>
+          <li><i class="ri-user-line"></i></li>
+          <li><i class="ri-shopping-bag-line"></i></li>
+        </ul>
+      </nav>
+    </header>
     <!-- Shop page 전체 컨테이너 -->
     <section class="shop_containor">
       <!-- Shop 헤더 -->
@@ -28,6 +53,99 @@
       Js로 뿌려주기 
       -->
       <div class="shop_item_wrap" id="shop_item_wrap"></div>
+      <div class="shop_pagehandler">
+        <ul>
+          <li class="selected"><span>1</span></li>
+          <li><span>2</span></li>
+          <li><span>3</span></li>
+          <li><span>4</span></li>
+          <li><span>5</span></li>
+          <li><span>6</span></li>
+          <li><span>7</span></li>
+          <li><span>8</span></li>
+          <li><span>9</span></li>
+        </ul>
+      </div>
     </section>
+    <!-- 전체 Footer -->
+    <footer>
+      <div class="footer_contents">
+        <h5>주식회사 토리든</h5>
+        <div class="footer_contents_info">
+          <div class="footer_contents_info-1">
+            <span
+              >대표자
+              <p>권인구, 이윤희</p></span
+            >
+            <span
+              >주소
+              <p>
+                [대전 본사] 대전 서구 도안북로93번길 10-3, 2층
+                <br />[서울 지사] 서울 강남구 언주로 620, 7층
+              </p></span
+            >
+            <span
+              >사업자등록번호
+              <p>760-86-00222</p></span
+            >
+            <span
+              >통신판매업 신고
+              <p>2019-대전서구-0605</p></span
+            >
+            <span
+              >개인정보관리책임자
+              <p>권인구, 이윤희</p></span
+            >
+          </div>
+          <div class="footer_contents_info-2">
+            <span
+              >고객센터
+              <p>1600-3584</p></span
+            >
+            <span
+              >운영시간
+              <p>
+                평일 10:00 - 17:00 (주말 · 공휴일 고객센터 휴무)<br />점심시간
+                12:00 - 13:00
+              </p></span
+            >
+            <span
+              >팩스번호
+              <p>070-7834-7700</p></span
+            >
+            <span
+              >고객문의
+              <p>info@torriden.com</p></span
+            >
+            <span
+              >국내영업
+              <p>sales@torriden.com</p></span
+            >
+            <span
+              >국내마케팅
+              <p>mkt@torriden.com</p></span
+            >
+            <span
+              >해외마케팅
+              <p>global@torriden.com</p></span
+            >
+          </div>
+
+          <div class="footer_contents_info-3">
+            <span>고객센터</span>
+            <span>이용약관</span>
+            <span>공지사항</span>
+            <span>자주묻는질문</span>
+            <span>1:1문의</span>
+            <span>채용사이트</span>
+            <span>개인정보처리방침</span>
+          </div>
+          <div class="footer_contents_info-4">
+            <span>Brand Site</span>
+            <i class="ri-add-line"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
