Design: 메인 페이지 mainpage_contents3 퍼블리싱 중

--- a/taejin/pages/header.html
+++ b/taejin/pages/header.html
@@ -9,6 +9,7 @@
             <li>ABOUT</li>
             <li>BRAND WORK</li>
             <li>SHOP</li>
+            <li>NEWS</li>
             <li>EVENT</li>
             <li>COMMUNITY</li>
         </ul>
