--- a/index.html
+++ b/index.html
@@ -5,18 +5,357 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Torriden</title>
         <link rel="stylesheet" href="./reset.css" />
-        <link rel="stylesheet" href="./index.css" />
         <link
             href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+        />
+        <link rel="stylesheet" href="./index.css" />
+
         <script src="./include.js" defer></script>
+        <script src="./taejin/javascript/index.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+
+        <script src="./taejin/javascript/swiper.js" defer></script>
+        <script src="./taejin/javascript/motion.js" defer></script>
     </head>
     <body>
         <!-- 공통 header -->
         <div id="header"></div>
 
-        <main></main>
+        <main>
+            <section class="mainpage_contents1">
+                <article class="mainpage_contents1-1">
+                    <h6>토리든 커넥트 성수</h6>
+                    <span>Torriwave Club Open!</span>
+                </article>
+                <article class="mainpage_contents1-2">
+                    <h6>NEW! CELLMAZING</h6>
+                    <h6>Brightening Spot Toning Pad</h6>
+                    <span>셀메이징 비타 패드 런칭</span>
+                </article>
+                <article class="mainpage_contents1-3">
+                    <h6>CONNECT TO POSITIVE CYCLE!</h6>
+                    <span>토리도원 기획세트</span>
+                </article>
+                <article class="mainpage_contents1-4">
+                    <h6>2025 OLIVEYOUNG FESTA</h6>
+                    <span>2025 올리브영 페스타</span>
+                </article>
+                <article class="mainpage_contents1-5">
+                    <h6>NEW! CELLMAZING</h6>
+                    <h6>Pore Perfecting Ampoule</h6>
+                    <span>셀메이징 모공 탄력 앰플 런칭</span>
+                </article>
+            </section>
+            <section class="mainpage_contents2">
+                <div class="swiper hero-swiper">
+                    <div class="swiper-wrapper">
+                        <article class="mainpage_contents2-1 swiper-slide">
+                            <div
+                                class="mainpage_contents2-1_text"
+                                data-motion="fade-up"
+                                data-stagger="0.00"
+                                data-delay="0.2"
+                            >
+                                <h3>한가위</h3>
+                                <h3>추석 선물 기획전</h3>
+                                <span>풍성한 한가위 보내세요!</span>
+                            </div>
+                        </article>
+                        <article class="mainpage_contents2-2 swiper-slide">
+                            <div
+                                class="mainpage_contents2-2_text"
+                                data-motion="fade-up"
+                                data-stagger="0.00"
+                                data-delay="0.2"
+                            >
+                                <h3>끈적임 ZERO</h3>
+                                <h3>다이브인 포맨</h3>
+                                <span>UP TO 40% 할인 + 사은품 증정</span>
+                            </div>
+                        </article>
+                        <article class="mainpage_contents2-3 swiper-slide">
+                            <div
+                                class="mainpage_contents2-3_text"
+                                data-motion="fade-up"
+                                data-stagger="0.00"
+                                data-delay="0.2"
+                            >
+                                <h3>토리든 X 가나디</h3>
+                                <h3>콜라보 기획세트</h3>
+                                <span>세상을 지배하는 큐티!</span>
+                            </div>
+                        </article>
+                        <article class="mainpage_contents2-4 swiper-slide">
+                            <div
+                                class="mainpage_contents2-4_text"
+                                data-motion="fade-up"
+                                data-stagger="0.00"
+                                data-delay="0.2"
+                            >
+                                <h3>신규회원만 만날 수 있는 웰컴 혜택</h3>
+                                <h3>WELCOME PICK</h3>
+                                <span
+                                    >9월, 신규 고객님만 누릴 수 있는 한정
+                                    특가</span
+                                >
+                            </div>
+                        </article>
+                        <article class="mainpage_contents2-5 swiper-slide">
+                            <div
+                                class="mainpage_contents2-5_text"
+                                data-motion="fade-up"
+                                data-stagger="0.00"
+                                data-delay="0.2"
+                            >
+                                <h3>NEW!</h3>
+                                <h3>셀메이징 저분자 콜라겐 모공 앰플 런칭</h3>
+                                <span>비우고 채우는 #모공턴오버앰플</span>
+                            </div>
+                        </article>
+                        <article class="mainpage_contents2-6 swiper-slide">
+                            <div
+                                class="mainpage_contents2-6_text"
+                                data-motion="fade-up"
+                                data-stagger="0.00"
+                                data-delay="0.2"
+                            >
+                                <h3>토리든 커넥트 성수</h3>
+                                <h3>플래그십 스토어 OPEN</h3>
+                                <span
+                                    >토리든의 긍정을 가득 담은 연결의 공간</span
+                                >
+                            </div>
+                        </article>
+                    </div>
+
+                    <!-- 좌/우 네비게이션 -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+
+                    <!-- 하단 게이지(진행 바) -->
+                    <div class="swiper-pagination"></div>
+                </div>
+            </section>
+
+            <section class="mainpage_contents3">
+                <h3>Recommended Products</h3>
+                <div class="mainpage_contents3_btns">
+                    <button>BEST</button>
+                    <button>NEW</button>
+                </div>
+                <div class="mainpage_contents3_bests">
+                    <article class="mainpage_contents3_bests-1">
+                        <div class="mainpage_contents3_bests-1_thumb">
+                            <img
+                                src="https://torridtr9977.cdn-nhncommerce.com/data/goods/21/12/51//134/134_main_067.jpg"
+                                alt=""
+                            />
+                            <button
+                                class="mainpage_contents3_bests-like-btn"
+                                aria-pressed="false"
+                                aria-label="찜하기"
+                            >
+                                <i class="ri-heart-line" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <span
+                            >[3종세트] 다이브인 저분사 히알루론산 세럼 50ml +
+                            토너 300ml + 크림 80ml+(쇼핑백 증정)</span
+                        >
+                        <div class="mainpage_contents3_bests-1_price">
+                            <p>
+                                <strong style="color: #475861">42%</strong>
+                                <strong>36,900원</strong>
+                                <span
+                                    style="
+                                        font-size: 12px;
+                                        color: gainsboro;
+                                        text-decoration: line-through;
+                                    "
+                                    >64,000원</span
+                                >
+                            </p>
+                            <i class="ri-shopping-bag-line"></i>
+                        </div>
+                    </article>
+                    <article class="mainpage_contents3_bests-2">
+                        <div class="mainpage_contents3_bests-2_thumb">
+                            <img
+                                src="https://torridtr9977.cdn-nhncommerce.com/data/goods/22/12/52/163/163_main_083.jpg"
+                                alt=""
+                            />
+                            <button
+                                class="mainpage_contents3_bests-like-btn"
+                                aria-pressed="false"
+                                aria-label="찜하기"
+                            >
+                                <i class="ri-heart-line" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <span
+                            >[3종세트] 밸런스풀 세럼 50ml + 크림80ml +
+                            토너패드60매+(쇼핑백 증정)</span
+                        >
+                        <div class="mainpage_contents3_bests-2_price">
+                            <p>
+                                <strong style="color: #475861">44%</strong>
+                                <strong>38,900원</strong>
+                                <span
+                                    style="
+                                        font-size: 12px;
+                                        color: gainsboro;
+                                        text-decoration: line-through;
+                                    "
+                                    >70,000원</span
+                                >
+                            </p>
+                            <i class="ri-shopping-bag-line"></i>
+                        </div>
+                    </article>
+                    <article class="mainpage_contents3_bests-3">
+                        <div class="mainpage_contents3_bests-3_thumb">
+                            <img
+                                src="https://torridtr9977.cdn-nhncommerce.com/data/goods/25/09/38/302/204_main_030.jpg"
+                                alt=""
+                            />
+                            <button
+                                class="mainpage_contents3_bests-like-btn"
+                                aria-pressed="false"
+                                aria-label="찜하기"
+                            >
+                                <i class="ri-heart-line" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <span
+                            >[2개묶음] 셀메이징 저분자 콜라겐 탄력 겔 마스크
+                            8매</span
+                        >
+                        <div class="mainpage_contents3_bests-3_price">
+                            <p>
+                                <strong style="color: #475861">46%</strong>
+                                <strong>32,000원</strong>
+                                <span
+                                    style="
+                                        font-size: 12px;
+                                        color: gainsboro;
+                                        text-decoration: line-through;
+                                    "
+                                    >60,000원</span
+                                >
+                            </p>
+                            <i class="ri-shopping-bag-line"></i>
+                        </div>
+                    </article>
+                    <article class="mainpage_contents3_bests-4">
+                        <div class="mainpage_contents3_bests-4_thumb">
+                            <img
+                                src="https://torridtr9977.cdn-nhncommerce.com/data/goods/25/09/38/304/304_main_062.jpg"
+                                alt=""
+                            />
+                            <button
+                                class="mainpage_contents3_bests-like-btn"
+                                aria-pressed="false"
+                                aria-label="찜하기"
+                            >
+                                <i class="ri-heart-line" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <span
+                            >[라인콜라보] 다이브인 저분자 히알루론산 마스크 27ml
+                            10매</span
+                        >
+                        <div class="mainpage_contents3_bests-4_price">
+                            <p>
+                                <strong style="color: #475861">50%</strong>
+                                <strong>15,000원</strong>
+                                <span
+                                    style="
+                                        font-size: 12px;
+                                        color: gainsboro;
+                                        text-decoration: line-through;
+                                    "
+                                    >30,000원</span
+                                >
+                            </p>
+                            <i class="ri-shopping-bag-line"></i>
+                        </div>
+                    </article>
+                    <article class="mainpage_contents3_bests-5">
+                        <div class="mainpage_contents3_bests-5_thumb">
+                            <img
+                                src="https://torridtr9977.cdn-nhncommerce.com/data/goods/25/09/38/303/303_main_026.jpg"
+                                alt=""
+                            />
+                            <button
+                                class="mainpage_contents3_bests-like-btn"
+                                aria-pressed="false"
+                                aria-label="찜하기"
+                            >
+                                <i class="ri-heart-line" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <span
+                            >[라인콜라보] 다이브인 저분자 히알루론산 멀티패드
+                            80매</span
+                        >
+                        <div class="mainpage_contents3_bests-5_price">
+                            <p>
+                                <strong style="color: #475861">25%</strong>
+                                <strong>17,100원</strong>
+                                <span
+                                    style="
+                                        font-size: 12px;
+                                        color: gainsboro;
+                                        text-decoration: line-through;
+                                    "
+                                    >23,000원</span
+                                >
+                            </p>
+                            <i class="ri-shopping-bag-line"></i>
+                        </div>
+                    </article>
+                    <article class="mainpage_contents3_bests-6">
+                        <div class="mainpage_contents3_bests-6_thumb">
+                            <img
+                                src="https://torridtr9977.cdn-nhncommerce.com/data/goods/25/09/37/301/301_main_094.jpg"
+                                alt=""
+                            />
+                            <button
+                                class="mainpage_contents3_bests-like-btn"
+                                aria-pressed="false"
+                                aria-label="찜하기"
+                            >
+                                <i class="ri-heart-line" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <span
+                            >[라인프렌즈 콜라보] [2개묶음] 셀메이징 저분자
+                            콜라겐 모공 탄력앰플 30ml</span
+                        >
+                        <div class="mainpage_contents3_bests-6_price">
+                            <p>
+                                <strong style="color: #475861">27%</strong>
+                                <strong>37,900원</strong>
+                                <span
+                                    style="
+                                        font-size: 12px;
+                                        color: gainsboro;
+                                        text-decoration: line-through;
+                                    "
+                                    >52,000원</span
+                                >
+                            </p>
+                            <i class="ri-shopping-bag-line"></i>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
 
         <!-- 공통 footer -->
         <div id="footer"></div>
