--- a/youngson/pages/shop7.html
+++ b/youngson/pages/shop7.html
@@ -13,18 +13,14 @@
     <link rel="stylesheet" href="../css/shop_pagehandler.css" />
 
     <script src="../javascript/data.js" defer></script>
-    <script type="module" src="../javascript/shop1.js" defer></script>
+    <script type="module" src="../javascript/shop.js" defer></script>
   </head>
   <body>
-    <!-- Shop page 전체 컨테이너 -->
     <section class="shop_containor">
-      <!-- Shop 헤더 -->
       <div class="shop_header_wrap">
         <div class="shop_header">ALL</div>
-        <!-- Shop 헤더 인포 -->
         <div class="shop_header_info">
           <span>총 <strong>103</strong>개의 상품이 있습니다.</span>
-
           <select class="shop_sort_selector">
             <option>인기순</option>
             <option>신상품순</option>
@@ -34,18 +30,18 @@
           </select>
         </div>
       </div>
-      <!-- Shop 아이템카드배포 -->
+
       <div class="shop_item_wrap" id="shop_item_wrap"></div>
-      <!-- Shop 하단 페이지선택 핸들러 -->
+
       <div class="shop_pagehandler">
         <ul>
-          <li class="selected"><span>1</span></li>
+          <li><span>1</span></li>
           <li><span>2</span></li>
           <li><span>3</span></li>
           <li><span>4</span></li>
           <li><span>5</span></li>
           <li><span>6</span></li>
-          <li><span>7</span></li>
+          <li class="selected"><span>7</span></li>
           <li><span>8</span></li>
           <li><span>9</span></li>
         </ul>
