--- a/taejin/pages/header.html
+++ b/taejin/pages/header.html
@@ -8,7 +8,7 @@
         <ul class="nav_menu">
             <li>ABOUT</li>
             <li>BRAND WORK</li>
-            <li>SHOP</li>
+            <li class="nav_menu_shop">SHOP</li>
             <li>NEWS</li>
             <li>EVENT</li>
             <li>COMMUNITY</li>
