Feat: brandwork,event mobile.ver

--- a/yuna/pages/event_ended3.html
+++ b/yuna/pages/event_ended3.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../../reset.css">
-    <link rel="stylesheet" href="../css/event_ended3.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="../css/event_ended3.css" />
     <script src="../javascript/event_ended3.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="event">
       <h2 class="event__title">EVENT</h2>
       <div class="event__buttons">
         <button class="event__button event__buttons-active">
-            진행중 이벤트
+          진행중 이벤트
         </button>
         <button class="event__button event__buttons-ended">
-            종료된 이벤트
+          종료된 이벤트
         </button>
       </div>
       <section class="event__section">
@@ -28,8 +32,16 @@
         <button class="event__pageButton event__pageButton-first">1</button>
         <button class="event__pageButton event__pageButton-second">2</button>
         <button class="event__pageButton event__pageButton-third">3</button>
-      </div>   
+      </div>
+      <div class="event_mobileButton">
+        <i class="ri-arrow-left-s-line"></i>
+        <div class="event_mobileButton-number">
+          <p class="event_mobileButton-first">3</p>
+          <p class="event_mobileButton-second">/</p>
+          <p class="event_mobileButton-third">3</p>
+        </div>
+        <i class="ri-arrow-right-s-line"></i>
+      </div>
     </div>
-</body>
-</body>
+  </body>
 </html>
