--- a/yuna/pages/news.html
+++ b/yuna/pages/news.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torriden</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../css/news.css" />
     <script src="../javascript/news.js" defer></script>
@@ -39,6 +43,15 @@
         <button class="news__pageButton news__pageButton-first">1</button>
         <button class="news__pageButton news__pageButton-second">2</button>
         <button class="news__pageButton news__pageButton-third">3</button>
+      </div>
+      <div class="news_mobileButton">
+        <div class="left">이전</div>
+        <div class="news_mobileButton-number">
+          <p class="news_mobileButton-first">1</p>
+          <p class="news_mobileButton-second">/</p>
+          <p class="news_mobileButton-third">3</p>
+        </div>
+        <div class="right">이후</div>
       </div>
     </div>
   </body>
