--- a/yuna/pages/brandwork2.html
+++ b/yuna/pages/brandwork2.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torriden</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../css/brandwork2.css" />
     <script src="../javascript/bramdwork2.js" defer></script>
@@ -17,6 +21,15 @@
       <div class="brandwork__pageButton">
         <button class="brandwork__pageButton-first">1</button>
         <button class="brandwork__pageButton-second">2</button>
+      </div>
+      <div class="brandwork__mobileButton">
+        <i class="ri-arrow-left-s-line"></i>
+        <div class="brandwork__mobileButton-number">
+          <p class="brandwork__mobileButton-first">2</p>
+          <p class="brandwork__mobileButton-second">/</p>
+          <p class="brandwork__mobileButton-third">2</p>
+        </div>
+        <i class="ri-arrow-right-s-line"></i>
       </div>
     </div>
   </body>
