--- a/yuna/pages/event_active.html
+++ b/yuna/pages/event_active.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torriden</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../css/event_active.css" />
     <script src="../javascript/event_active.js" defer></script>
@@ -26,6 +30,15 @@
       </section>
       <div class="event__pageButton">
         <button class="event__pageButton-first">1</button>
-      </div> <br>
+      </div>
+      <div class="event_mobileButton">
+        <i class="ri-arrow-left-s-line"></i>
+        <div class="event_mobileButton-number">
+          <p class="event_mobileButton-first">1</p>
+          <p class="event_mobileButton-second">/</p>
+          <p class="event_mobileButton-third">1</p>
+        </div>
+        <i class="ri-arrow-right-s-line"></i>
+      </div>
   </body>
 </html>
