--- a/yuna/pages/event_ended.html
+++ b/yuna/pages/event_ended.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torriden</title>
+        <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../../reset.css">
     <link rel="stylesheet" href="../css/event_ended.css">
     <script src="../javascript/event_ended.js" defer></script>
   </head>
   <body>
-        <div class="event">
+    <div class="event">
       <h2 class="event__title">EVENT</h2>
       <div class="event__buttons">
         <button class="event__button event__buttons-active">
@@ -29,5 +33,14 @@
         <button class="event__pageButton event__pageButton-second">2</button>
         <button class="event__pageButton event__pageButton-third">3</button>
       </div> 
+      <div class="event_mobileButton">
+        <i class="ri-arrow-left-s-line"></i>
+        <div class="event_mobileButton-number">
+          <p class="event_mobileButton-first">1</p>
+          <p class="event_mobileButton-second">/</p>
+          <p class="event_mobileButton-third">3</p>
+        </div>
+        <i class="ri-arrow-right-s-line"></i>
+      </div>
   </body>
 </html>
