--- a/youngson/pages/shop1.html
+++ b/youngson/pages/shop1.html
@@ -6,12 +6,12 @@
     <title>Torriden</title>
 
     <link rel="stylesheet" href="../../reset.css" />
-
     <link rel="stylesheet" href="../css/shop.css" />
     <link rel="stylesheet" href="../css/shop_header.css" />
     <link rel="stylesheet" href="../css/shop_item.css" />
     <link rel="stylesheet" href="../css/shop_pagehandler.css" />
 
+    <script src="../javascript/shopData.js" defer></script>
     <script src="../javascript/data.js" defer></script>
     <script type="module" src="../javascript/shop1.js" defer></script>
   </head>
@@ -23,7 +23,10 @@
         <div class="shop_header">ALL</div>
         <!-- Shop 헤더 인포 -->
         <div class="shop_header_info">
-          <span>총 <strong>103</strong>개의 상품이 있습니다.</span>
+          <span class="nonreactSpan"
+            >총 <strong>103</strong>개의 상품이 있습니다.</span
+          >
+          <span class="reactSpan">총 <strong>103개 </strong></span>
 
           <select class="shop_sort_selector">
             <option>인기순</option>
@@ -34,12 +37,15 @@
           </select>
         </div>
       </div>
+
       <!-- Shop 아이템카드배포 -->
       <div class="shop_item_wrap" id="shop_item_wrap"></div>
+
       <!-- Shop 하단 페이지선택 핸들러 -->
       <div class="shop_pagehandler">
-        <ul>
-          <li class="selected"><span>1</span></li>
+        <button class="shop_page_moreload">더보기</button>
+        <ul class="shop_page_remote">
+          <li class="shop_page_selected"><span>1</span></li>
           <li><span>2</span></li>
           <li><span>3</span></li>
           <li><span>4</span></li>
