--- a/youngson/pages/shop2.html
+++ b/youngson/pages/shop2.html
@@ -34,9 +34,10 @@
       <div class="shop_item_wrap" id="shop_item_wrap"></div>
 
       <div class="shop_pagehandler">
+        <button class="shop_page_moreload">더보기</button>
         <ul>
           <li><span>1</span></li>
-          <li class="selected"><span>2</span></li>
+          <li class="shop_page_selected"><span>2</span></li>
           <li><span>3</span></li>
           <li><span>4</span></li>
           <li><span>5</span></li>
