--- a/youngson/pages/shop7.html
+++ b/youngson/pages/shop7.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/shop_pagehandler.css" />
 
     <script src="../javascript/data.js" defer></script>
-    <script type="module" src="../javascript/shop.js" defer></script>
+    <script type="module" src="../javascript/shop7.js" defer></script>
   </head>
   <body>
     <section class="shop_containor">
@@ -34,6 +34,7 @@
       <div class="shop_item_wrap" id="shop_item_wrap"></div>
 
       <div class="shop_pagehandler">
+        <button class="shop_page_moreload">더보기</button>
         <ul>
           <li><span>1</span></li>
           <li><span>2</span></li>
@@ -41,7 +42,7 @@
           <li><span>4</span></li>
           <li><span>5</span></li>
           <li><span>6</span></li>
-          <li class="selected"><span>7</span></li>
+          <li class="shop_page_selected"><span>7</span></li>
           <li><span>8</span></li>
           <li><span>9</span></li>
         </ul>
