Design: About 페이지 퍼블리싱 완료

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         />
         <link rel="stylesheet" href="./index.css" />
 
-        <script src="./include.js" defer></script>
+        <script type="module" src="./include.js" defer></script>
         <script src="./taejin/javascript/index.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 
