--- a/youngson/pages/community.html
+++ b/youngson/pages/community.html
@@ -13,9 +13,15 @@
         <div class="community_header">MEMBERSHIP</div>
         <div class="community_header_info">토리든 회원혜택</div>
       </div>
-      <div class="community_img">
+      <div class="community_browser_img">
         <img
           src="https://torridtr9977.cdn-nhncommerce.com/data/skin/front/moment/images/membership_241001.jpg"
+          alt=""
+        />
+      </div>
+      <div class="community_mobile_img">
+        <img
+          src="https://torridtr9977.cdn-nhncommerce.com/data/skin/mobile/moment_C/wib/img/main/membership_mobile.jpg"
           alt=""
         />
       </div>
