--- a/youngson/pages/shop1.html
+++ b/youngson/pages/shop1.html
@@ -46,7 +46,9 @@
         <button class="shop_page_moreload">더보기</button>
         <ul class="shop_page_remote">
           <li class="shop_page_selected"><span>1</span></li>
-          <li><span>2</span></li>
+          <li>
+            <span>2</span>
+          </li>
           <li><span>3</span></li>
           <li><span>4</span></li>
           <li><span>5</span></li>
