--- a/yuna/pages/brandwork.html
+++ b/yuna/pages/brandwork.html
@@ -16,20 +16,24 @@
     <div class="brandwork">
       <h2 class="brandwork__title">브랜드 캠페인</h2>
       <section class="brandwork__section">
-        <!-- js 있음 -->
+        <!-- java script -->
       </section>
       <div class="brandwork__pageButton">
         <button class="brandwork__pageButton-first">1</button>
         <button class="brandwork__pageButton-second">2</button>
       </div>
       <div class="brandwork__mobileButton">
-        <i class="ri-arrow-left-s-line"></i>
+        <a href="./brandwork.html" class="left">
+          <i class="ri-arrow-left-s-line"></i>
+        </a>
         <div class="brandwork__mobileButton-number">
           <p class="brandwork__mobileButton-first">1</p>
           <p class="brandwork__mobileButton-second">/</p>
           <p class="brandwork__mobileButton-third">2</p>
         </div>
-        <i class="ri-arrow-right-s-line"></i>
+        <a href="./brandwork2.html">
+          <i class="ri-arrow-right-s-line"></i>
+        </a>
       </div>
     </div>
   </body>
