--- a/yuna/pages/brandwork2.html
+++ b/yuna/pages/brandwork2.html
@@ -16,7 +16,7 @@
     <div class="brandwork">
       <h2 class="brandwork__title">브랜드 캠페인</h2>
       <section class="brandwork__section">
-        <!-- js 있음 -->
+        <!-- java script -->
       </section>
       <div class="brandwork__pageButton">
         <button class="brandwork__pageButton-first">1</button>
