--- a/yuna/pages/event_ended.html
+++ b/yuna/pages/event_ended.html
@@ -24,9 +24,8 @@
         </button>
       </div>
       <section class="event__section">
-        <!-- JS 내용 정리 -->
-        <!-- <img class="event__section-image" src="" alt="">
-        <span class="event__section-image"></span> -->
+        <!-- java script -->
+
       </section>
       <div class="event__pageButtons">
         <button class="event__pageButton event__pageButton-first">1</button>
