--- a/yuna/pages/news.html
+++ b/yuna/pages/news.html
@@ -24,7 +24,7 @@
             </tr>
           </thead>
           <tbody class="news__table_tbody">
-            <!-- JS 내용  -->
+            <!-- java script -->
             <!-- <tr class="news__table_row">
               <td class="news__table_num">1</td>
               <td class="news__table_title">제목</td>
@@ -43,6 +43,7 @@
       </section>
       <!-- 모바일 버전 -->
       <section class="news__mobile_section">
+        <!-- java script -->
         <!-- <article class="news__mobile_contens">
           <h3 class="news__mobile_contents_title">제목</h3>
           <div class="news__mobile_contents_w_date">
