--- a/yuna/pages/news3.html
+++ b/yuna/pages/news3.html
@@ -28,14 +28,7 @@
             </tr>
           </thead>
           <tbody class="news__table_tbody">
-            <!-- JS 내용  -->
-            <!-- <tr class="news__table_row">
-              <td class="news__table_num">1</td>
-              <td class="news__table_title">제목</td>
-              <td class="news__table_date">2025.09.30</td>
-              <td class="news__table_writer">관리자</td>
-              <td class="news__table_view">15</td>
-            </tr> -->
+            <!-- java script -->
           </tbody>
         </table>
         <!-- 페이지 버튼(Web) -->
@@ -47,18 +40,7 @@
       </section>
       <!-- 모바일 버전 -->
       <section class="news__mobile_section">
-        <!-- JS 내용 -->
-        <!-- <article class="news__mobile_contens">
-          <h3 class="news__mobile_contents_title">제목</h3>
-          <div class="news__mobile_contents_w_date">
-            <p class="news__mobile_contents_writer">관리자</p>
-            <p class="news__mobile_contents_date">2025.09.30</p>
-          </div>
-          <div class="news__mobile_contents_r_view">
-            <span class="news__mobile_contents_recommend"> 추천수0 </span>
-            <span class="news__mobile_contents_view"> 조회수</span>
-          </div>
-        </article> -->
+        <!-- java script -->
       </section>
 
       <!-- 페이지 버튼(Mobile) -->
