--- a/yuna/pages/event_active.html
+++ b/yuna/pages/event_active.html
@@ -24,9 +24,7 @@
         </button>
       </div>
       <section class="event__section">
-        <!-- JS 내용 정리 -->
-        <!-- <img class="event__section-image" src="" alt="">
-        <span class="event__section-image"></span> -->
+        <!-- java script -->
       </section>
       <div class="event__pageButton">
         <button class="event__pageButton-first">1</button>
