--- a/yuna/pages/news2.html
+++ b/yuna/pages/news2.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torriden</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="../../reset.css" />
     <link rel="stylesheet" href="../css/news2.css" />
     <script src="../javascript/news2.js" defer></script>
@@ -28,14 +24,7 @@
             </tr>
           </thead>
           <tbody class="news__table_tbody">
-            <!-- JS 내용  -->
-            <!-- <tr class="news__table_row">
-              <td class="news__table_num">1</td>
-              <td class="news__table_title">제목</td>
-              <td class="news__table_date">2025.09.30</td>
-              <td class="news__table_writer">관리자</td>
-              <td class="news__table_view">15</td>
-            </tr> -->
+            <!-- java script -->
           </tbody>
         </table>
         <!-- 페이지 버튼(Web) -->
@@ -45,21 +34,11 @@
           <button class="news__pageButton news__pageButton-third">3</button>
         </div>
       </section>
+
       <!-- 모바일 버전 -->
       <section class="news__mobile_section">
-        <!-- <article class="news__mobile_contens">
-          <h3 class="news__mobile_contents_title">제목</h3>
-          <div class="news__mobile_contents_w_date">
-            <p class="news__mobile_contents_writer">관리자</p>
-            <p class="news__mobile_contents_date">2025.09.30</p>
-          </div>
-          <div class="news__mobile_contents_r_view">
-            <span class="news__mobile_contents_recommend"> 추천수0 </span>
-            <span class="news__mobile_contents_view"> 조회수</span>
-          </div>
-        </article> -->
+        <!-- java script -->
       </section>
-
       <!-- 페이지 버튼(Mobile) -->
       <div class="news_mobileButton">
         <div class="left">이전</div>
