Feat: Main페이지와 About페이지 라우팅 연결 완료

--- a/taejin/pages/about.html
+++ b/taejin/pages/about.html
@@ -6,6 +6,10 @@
         <title>Torriden</title>
         <link rel="stylesheet" href="../../reset.css" />
         <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+            rel="stylesheet"
+        />
+        <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
         />
