--- a/taejin/pages/header.html
+++ b/taejin/pages/header.html
@@ -1,12 +1,13 @@
-<link rel="stylesheet" href="./taejin/css/header.css" />
 <header>
     <nav>
-        <img
-            src="https://torridtr9977.cdn-nhncommerce.com/data/skin/front/moment_C/img/banner/87091f70b00a68e2c0ae40eebd944819_11423.svg"
-            alt=""
-        />
+        <a href="/Torriden/index.html">
+            <img
+                src="https://torridtr9977.cdn-nhncommerce.com/data/skin/front/moment_C/img/banner/87091f70b00a68e2c0ae40eebd944819_11423.svg"
+                alt="Torriden Logo"
+            />
+        </a>
         <ul class="nav_menu">
-            <li>ABOUT</li>
+            <li><a href="/Torriden/taejin/pages/about.html">ABOUT</a></li>
             <li>BRAND WORK</li>
             <li class="nav_menu_shop">SHOP</li>
             <li>NEWS</li>
