--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
         />
+        <link rel="stylesheet" href="./taejin/css/header.css" />
+        <link rel="stylesheet" href="./taejin/css/footer.css" />
         <link rel="stylesheet" href="./index.css" />
 
         <script type="module" src="./include.js" defer></script>
