--- a/yuna/pages/brandwork.html
+++ b/yuna/pages/brandwork.html
@@ -23,7 +23,7 @@
         <button class="brandwork__pageButton-second">2</button>
       </div>
       <div class="brandwork__mobileButton">
-        <a href="./brandwork.html" class="left">
+        <a href="../../yuna/pages/brandwork.html" class="left">
           <i class="ri-arrow-left-s-line"></i>
         </a>
         <div class="brandwork__mobileButton-number">
@@ -31,7 +31,7 @@
           <p class="brandwork__mobileButton-second">/</p>
           <p class="brandwork__mobileButton-third">2</p>
         </div>
-        <a href="./brandwork2.html">
+        <a href="../../yuna/pages/brandwork2.html">
           <i class="ri-arrow-right-s-line"></i>
         </a>
       </div>
