Feat: Shop, Community 페이지 라우팅 연결 완료

--- a/taejin/pages/header.html
+++ b/taejin/pages/header.html
@@ -9,10 +9,14 @@
         <ul class="nav_menu">
             <li><a href="/Torriden/taejin/pages/about.html">ABOUT</a></li>
             <li>BRAND WORK</li>
-            <li class="nav_menu_shop">SHOP</li>
+            <li class="nav_menu_shop">
+                <a href="/Torriden/youngson/pages/shop1.html">SHOP</a>
+            </li>
             <li>NEWS</li>
             <li>EVENT</li>
-            <li>COMMUNITY</li>
+            <li>
+                <a href="/Torriden/youngson/pages/community.html">COMMUNITY</a>
+            </li>
         </ul>
         <ul class="nav_icon">
             <li><i class="ri-search-line"></i></li>
