--- a/youngson/pages/community.html
+++ b/youngson/pages/community.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Torriden</title>
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../css/community.css" />
-  </head>
-  <body>
-    <section class="community_containor">
-      <div class="community_header_wrap">
-        <div class="community_header">MEMBERSHIP</div>
-        <div class="community_header_info">토리든 회원혜택</div>
-      </div>
-      <div class="community_browser_img">
-        <img
-          src="https://torridtr9977.cdn-nhncommerce.com/data/skin/front/moment/images/membership_241001.jpg"
-          alt=""
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Torriden</title>
+        <link rel="stylesheet" href="../../reset.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+            rel="stylesheet"
         />
-      </div>
-      <div class="community_mobile_img">
-        <img
-          src="https://torridtr9977.cdn-nhncommerce.com/data/skin/mobile/moment_C/wib/img/main/membership_mobile.jpg"
-          alt=""
-        />
-      </div>
-    </section>
-  </body>
+        <link rel="stylesheet" href="../../taejin/css/header.css" />
+        <link rel="stylesheet" href="../../taejin/css/footer.css" />
+        <link rel="stylesheet" href="../css/community.css" />
+        <script type="module" src="../../include.js" defer></script>
+    </head>
+    <body>
+        <!-- 공통 header -->
+        <div id="header"></div>
+
+        <section class="community_containor">
+            <div class="community_header_wrap">
+                <div class="community_header">MEMBERSHIP</div>
+                <div class="community_header_info">토리든 회원혜택</div>
+            </div>
+            <div class="community_browser_img">
+                <img
+                    src="https://torridtr9977.cdn-nhncommerce.com/data/skin/front/moment/images/membership_241001.jpg"
+                    alt=""
+                />
+            </div>
+            <div class="community_mobile_img">
+                <img
+                    src="https://torridtr9977.cdn-nhncommerce.com/data/skin/mobile/moment_C/wib/img/main/membership_mobile.jpg"
+                    alt=""
+                />
+            </div>
+        </section>
+
+        <!-- 공통 footer -->
+        <div id="footer"></div>
+    </body>
 </html>
