--- a/youngson/pages/shop6.html
+++ b/youngson/pages/shop6.html
@@ -6,16 +6,25 @@
     <title>Torriden</title>
 
     <link rel="stylesheet" href="../../reset.css" />
-
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+<link rel="stylesheet" href="../../taejin/css/header.css" />
+<link rel="stylesheet" href="../../taejin/css/footer.css" />
     <link rel="stylesheet" href="../css/shop.css" />
     <link rel="stylesheet" href="../css/shop_header.css" />
     <link rel="stylesheet" href="../css/shop_item.css" />
     <link rel="stylesheet" href="../css/shop_pagehandler.css" />
 
+    <script type="module" src="../../include.js" defer></script>
     <script src="../javascript/data.js" defer></script>
     <script type="module" src="../javascript/shop6.js" defer></script>
   </head>
   <body>
+    <!-- 공통 header -->
+    <div id="header"></div>
+
     <section class="shop_containor">
       <div class="shop_header_wrap">
         <div class="shop_header">ALL</div>
@@ -48,5 +57,8 @@
         </ul>
       </div>
     </section>
+
+    <!-- 공통 footer -->
+        <div id="footer"></div>
   </body>
 </html>
